https enforced in github pages

--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     </style>
 
     <script>
-        if (window.location.protocol == "https:") {
+        /*if (window.location.protocol == "https:") {
             window.location.href = window.location.href.replace("https:", "http:"); // because our server is http
-        }
+        }*/
 		
 		// The process starts when window is loaded
         window.onload = function () {		
