--- a/source.html
+++ b/source.html
@@ -110,9 +110,9 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.0/socket.io.min.js"></script>
     <script>
-        if (window.location.protocol == "https:") {
+        /*if (window.location.protocol == "https:") {
             window.location.href = window.location.href.replace("https:", "http:"); // because our server is http
-        }
+        }*/
 		
 		DEFAULT_PARAMS = {'bgcolor': 'lightgreen', 'size': '35', 'weight': '600', 'color': 'white', 'st_color': 'black', 'st_width': '5', 'v_align': 'bottom'};
 
